package com.ctfp.dto

import kotlinx.serialization.Serializable

@Serializable
data class File (
    val name : String,
)