Project ctfp {
  database_type: 'PostgreSQL'
  Note: 'CTF+ Platform Database'
}

// ══════════════════════════════════════════════
//  CORE
// ══════════════════════════════════════════════

Table users {
  id int [pk, increment]
  code_id int [ref: > registration_codes.id]
  username varchar(64) [unique, not null]
  email varchar(255) [unique]
  password_hash varchar(255)
  language varchar(2) [not null, default: 'en']
  country varchar(2)
  website varchar(255)
  role enum('user', 'admin') [not null, default: 'user']
  is_verified boolean [not null, default: false]
  is_hidden boolean [not null, default: false]
  is_banned boolean [not null, default: false]
  totp_secret varchar(255)
  totp_enabled boolean [not null, default: false]
  sound_enabled boolean [not null, default: true]
  visibility_settings jsonb [note: 'per-field visibility for others, e.g. {"email":true,"country":false}']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table teams {
  id int [pk, increment]
  name varchar(64) [unique, not null]
  country varchar(2)
  website varchar(255)
  is_hidden boolean [not null, default: false]
  is_banned boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table team_members {
  id int [pk, increment]
  team_id int [not null, ref: > teams.id]
  user_id int [not null, ref: > users.id]
  role enum('owner', 'member') [not null, default: 'member']
  joined_at timestamp [not null, default: `now()`]

  indexes {
    (team_id, user_id) [unique]
  }
}

// ══════════════════════════════════════════════
//  AUTH
// ══════════════════════════════════════════════

Table sessions {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  token varchar(255) [unique, not null]
  ip_address varchar(45)
  user_agent text
  remember_me boolean [not null, default: false]
  expires_at timestamp [not null]
  created_at timestamp [not null, default: `now()`]
}

Table api_tokens {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  token_hash varchar(255) [unique, not null]
  name varchar(64) [not null]
  last_used_at timestamp
  expires_at timestamp
  created_at timestamp [not null, default: `now()`]

  Note: 'JWT / API token references'
}

Table password_resets {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  token_hash varchar(255) [unique, not null]
  expires_at timestamp [not null]
  used_at timestamp
  created_at timestamp [not null, default: `now()`]
}

Table magic_links {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  token_hash varchar(255) [unique, not null]
  expires_at timestamp [not null]
  used_at timestamp
  created_at timestamp [not null, default: `now()`]
}

Table registration_codes {
  id int [pk, increment]
  code varchar(255) [unique, not null]
  max_uses int
  expires_at timestamp
  created_at timestamp [not null, default: `now()`]
}

// ══════════════════════════════════════════════
//  CHALLENGES
// ══════════════════════════════════════════════

Table challenges {
  id int [pk, increment]
  title varchar(255) [not null]
  description text
  is_visible boolean [not null, default: true]
  publish_at timestamp
  max_attempts int
  categories varchar(64)[]
  time_limit int [note: 'seconds']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

// ══════════════════════════════════════════════
//  FILES (polymorphic)
// ══════════════════════════════════════════════

Table files {
  id int [pk, increment]
  owner_type varchar(64) [not null, note: 'e.g. challenge, page, extra_field, sound']
  owner_id int [not null]
  filename varchar(255) [not null]
  filepath varchar(512) [not null]
  filesize bigint [not null]
  mime_type varchar(128)
  created_at timestamp [not null, default: `now()`]

  indexes {
    (owner_type, owner_id) [name: 'idx_files_owner']
  }
}

Table challenge_timers {
  id int [pk, increment]
  challenge_id int [not null, ref: > challenges.id]
  user_id int [not null, ref: > users.id]
  team_id int [ref: > teams.id]
  started_at timestamp [not null, default: `now()`]
  expires_at timestamp [not null]

  indexes {
    (challenge_id, user_id) [unique]
    (challenge_id, team_id) [unique]
  }

  Note: 'Tracks per-user start for time-limited challenges'
}

// ══════════════════════════════════════════════
//  HINTS
// ══════════════════════════════════════════════

Table hints {
  id int [pk, increment]
  challenge_id int [not null, ref: > challenges.id]
  title varchar(255)
  description text
  cost int [not null, default: 0]
  visible_after timestamp
  sort_order int [not null, default: 0]
  created_at timestamp [not null, default: `now()`]
}

Table hint_unlocks {
  id int [pk, increment]
  hint_id int [not null, ref: > hints.id]
  user_id int [ref: > users.id]
  team_id int [ref: > teams.id]
  unlocked_at timestamp [not null, default: `now()`]

  indexes {
    (hint_id, user_id) [unique]
    (hint_id, team_id) [unique]
  }
}

// ══════════════════════════════════════════════
//  FLAGS & SUBMISSIONS
// ══════════════════════════════════════════════

Table flags {
  id int [pk, increment]
  challenge_id int [not null, ref: > challenges.id]
  pattern varchar(512) [not null, note: 'regex pattern']
  is_case_sensitive boolean [not null, default: true]
  initial_value int [not null, default: 100]
  decay_value int [not null, default: 10]
  minimum_value int [not null, default: 10]
  decay_function enum('static', 'linear', 'logarithmic', 'parabolic') [not null, default: 'static']
  created_at timestamp [not null, default: `now()`]
}

Table submissions {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  team_id int [ref: > teams.id]
  challenge_id int [not null, ref: > challenges.id]
  flag_id int [ref: > flags.id, note: 'set when matched a specific flag']
  submitted_flag text [not null]
  is_correct boolean [not null]
  // separate table?
  ip_address varchar(45)
  user_agent text
  created_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, challenge_id) [name: 'idx_submissions_user_challenge']
  }
}

// ══════════════════════════════════════════════
//  NOTIFICATIONS
// ══════════════════════════════════════════════

Table notifications {
  id int [pk, increment]
  title varchar(255) [not null]
  message text [not null, note: 'markdown/html']
  type enum('info', 'success', 'warning', 'danger') [not null, default: 'info']
  send_email boolean [not null, default: false]
  sound_file_id int [ref: > files.id]
  created_at timestamp [not null, default: `now()`]
}

Table user_notifications {
  id int [pk, increment]
  notification_id int [not null, ref: > notifications.id]
  user_id int [not null, ref: > users.id]
  is_read boolean [not null, default: false]
  read_at timestamp

  indexes {
    (notification_id, user_id) [unique]
  }

  Note: 'Read-state tracking per user'
}

// ══════════════════════════════════════════════
//  CUSTOM PAGES
// ══════════════════════════════════════════════

Table pages {
  id int [pk, increment]
  title varchar(255) [not null]
  route varchar(255) [not null]
  language varchar(10) [not null, default: 'en']
  format enum('md', 'html') [not null, default: 'md']
  target enum('current', 'new') [not null, default: 'current']
  body text
  is_hidden boolean [not null, default: false]
  requires_auth boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (route, language) [unique, note: 'same route can exist for different lang combos']
  }
}

// ══════════════════════════════════════════════
//  CONFIG & ADMIN
// ══════════════════════════════════════════════

Table config {
  id int [pk, increment, note: 'single-row table, id = 1']
  settings jsonb [not null, default: '{}']
  updated_at timestamp [not null, default: `now()`]

  Note: '''
    Single-row jsonb config. Structure:
    {
      "event": { "name": "", "description": "", "start": null, "end": null, "freeze": null, "paused": false },
      "brand": { "favicon": null, "logo": null },
      "theme": { "default_type": "system", "default_language": "en" },
      "auth": {
        "password_enabled": true, "email_required": false, "country_enabled": true,
        "magic_link_enabled": false, "totp_enabled": false, "jwt_enabled": true,
        "registration_code_enabled": false, "email_verification": "link"
      },
      "team": { "enabled": true, "max_members": 5 },
      "scoreboard": { "enabled": true, "freeze_enabled": true },
      "email": { "host": "", "port": 587, "username": "", "password": "", "from": "" },
      "robots_txt": "",
      "tos_page_id": null,
      "privacy_page_id": null
    }
  '''
}

Table email_templates {
  id int [pk, increment]
  subject varchar(255) [unique, not null]
  body text [not null]
  variables varchar[]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}
